--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # .gitignore
 # Node.js dependencies
-node_modules/ # node_modules in project root
-cli-tool/node_modules/ # node_modules in cli-tool
-auction-api/node_modules/ # node_modules in auction-api
+node_modules/              # プロジェクトルートのnode_modules (もしあれば)
+cli-tool/node_modules/     # cli-tool の node_modules
+auction-api/node_modules/  # auction-api の node_modules
 
 # Environment variables
-.env # .env in project root (if any)
-cli-tool/.env # .env in cli-tool
-auction-api/.env # .env in auction-api
+.env                       # プロジェクトルートの .env (もしあれば)
+cli-tool/.env              # cli-tool の .env
+auction-api/.env           # auction-api の .env
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
-.log
+.loggit 
