--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # .gitignore
 # Node.js dependencies
-node_modules/              # プロジェクトルートのnode_modules (もしあれば)
-cli-tool/node_modules/     # cli-tool の node_modules
-auction-api/node_modules/  # auction-api の node_modules
+node_modules/              # Project root's node_modules (if present)
+cli-tool/node_modules/     # cli-tool's node_modules
+auction-api/node_modules/  # auction-api's node_modules
 
 # Environment variables
-.env                       # プロジェクトルートの .env (もしあれば)
-cli-tool/.env              # cli-tool の .env
-auction-api/.env           # auction-api の .env
+.env                       # Project root's .env (if present)
+cli-tool/.env              # cli-tool's .env
+auction-api/.env           # auction-api's .env
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
-.loggit 
+.log
